@pedroGoffi[Added CMAKE to its src]

--- a/examples/server_html.html
+++ b/examples/server_html.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pietra Lang</title>
+    <script src="test.js"></script>
 </head>
 <body>
-    Hello From Pietra Lang!    
+    Hello From Pietra Lang!        
 </body>
+
+<style>
+    body {
+        background-color: pink;
+        color: red;
+    }
+</style>
 </html>
